# Pre-sales

./: .env.example  .gitignore  AGENT.md  Plan.md  Requirement Design.md  api.txt
.omo/run-continuation/: ses_090a9fb91ffedmKAmELyP63wrs.json  ses_090aa13a2ffeRjzaa7N5hz4dcq.json  ses_090aa318dffeGP9amyN9CV2G7a.json  ses_0913d3b0effeV7XYKYaIM1GWnl.json  ses_0913dbe0cffeK6RBrRg4avf5Cd.json  ses_09164d275ffe85WKSM0ogYk4Ey.json
.superpowers/sdd/: task2-backend-brief.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_create_projects.py  0002_create_materials_and_runs.py
backend/app/: dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: materials.py  projects.py  runs.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  generation_run.py  material.py  project.py
backend/app/schemas/: material.py  project.py  requirement.py  run.py
backend/app/services/: agent_gateway.py  file_storage.py  material_parser.py  openai_agent.py  project_service.py  run_service.py
backend/tests/integration/: test_analysis_flow.py  test_projects_api.py
backend/tests/unit/: test_material_parser.py  test_run_service.py
docs/superpowers/specs/: 2026-07-17-presales-agent-simplified-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: http.ts  materials.ts  projects.ts  runs.ts
frontend/src/components/: ProjectForm.vue  (+2 more)
(+7 files in other folders)
